js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenJsModules/lib1/JsModuleA.4.kt
@file:JsModule("js-module-a-new")

external fun externalDemoFunction(): Int
